Salesforce CPQ/main/default/objects/QuoteLineConsumptionSchedule__c/fields/ConsumptionSchedule__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumption Schedule</label>
    <referenceTo>ConsumptionSchedule</referenceTo>
    <relationshipLabel>Quote Line Consumption Schedules</relationshipLabel>
    <relationshipName>QuoteLineConsumptionSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>