Salesforce CPQ/main/default/objects/QuoteLineConsumptionSchedule__c/fields/QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine__c</fullName>
    <label>Quote Line</label>
    <referenceTo>QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Line Consumption Schedules</relationshipLabel>
    <relationshipName>QuoteLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>